11_Ingress/06_ingressclass_scope_namespaced.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
    name: external-lb-2
spec:
    controller: example.com/ingress-controller
    parameters:
        # The parameters for this IngressClass are specified in an
        # IngressParameter (API group k8s.example.com) named "external-config",
        # that's in the "external-configuration" namespace.
        scope: Namespace
        apiGroup: k8s.example.com
        kind: IngressParameter
        namespace: external-configuration
        name: external-config
