11_Ingress/02_ingress_resource_backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-resource-backend
spec:
    defaultBackend:
        resource:
            apiGroup: k8s.example.com
            kind: StorageBucket
            name: static-assets
    rules:
        - http:
              paths:
                  - path: /icons
                    pathType: ImplementationSpecific
                    backend:
                        resource:
                            apiGroup: k8s.example.com
                            kind: StorageBucket
                            name: icon-assets
