11_Ingress/08_ingress_single_service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: test-ingress
spec:
    defaultBackend:
        service:
            name: test
            port:
                number: 80
