11_Ingress/09_simple_fanout.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: simple-fanout-example
spec:
    rules:
        - host: foo.bar.com
          http:
              paths:
                  - path: /foo
                    pathType: Prefix
                    backend:
                        service:
                            name: service1
                            port:
                                number: 4200
                  - path: /bar
                    pathType: Prefix
                    backend:
                        service:
                            name: service2
                            port:
                                number: 8080
