11_Ingress/10_name_virtual_host_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: name-virtual-host-ingress
spec:
    rules:
        - host: foo.bar.com
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: service1
                            port:
                                number: 80
        - host: bar.foo.com
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: service2
                            port:
                                number: 80
