11_Ingress/11_name_virtual_host_ingress_no_third_host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: name-virtual-host-ingress-no-third-host
spec:
    rules:
        - host: first.bar.com
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: service1
                            port:
                                number: 80
        - host: second.bar.com
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: service2
                            port:
                                number: 80
        - http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: service3
                            port:
                                number: 80
