11_Ingress/13_tls_example_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: tls-example-ingress
spec:
    tls:
        - hosts:
              - https-example.foo.com
          secretName: testsecret-tls
    rules:
        - host: https-example.foo.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: service1
                            port:
                                number: 80
